[tool.poetry]
name = "db-backups"
version = "0.0.1"
description = "DB backup took"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
boto3 = "1.34.7"
sentry-sdk = "1.38.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
Flake8-pyproject = "^1.2.0"

[tool.poetry.scripts]
main = "src.run:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.flake]
max-line-length = 100
extend-ignore = ['F401']
