[tool.poetry]
name = "db-backups"
version = "0.0.1"
description = "DB backup took"
readme = "README.md"
authors = []
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
boto3 = "1.34.59"
sentry-sdk = "1.41.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^23.12.0"
flake8 = "^6.1.0"
Flake8-pyproject = "^1.2.0"

[tool.poetry.scripts]
backup = "src.commands.backup:cli"
restore = "src.commands.restore:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.flake]
max-line-length = 100
extend-ignore = ['F401']
